[tool.poetry]
name = "saju-back"
version = "0.1.0"
description = ""
authors = ["nadaa <nadaa@ajou.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.9"
uvicorn = "^0.34.0"
openai = "^1.65.1"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"